--- a/index.html
+++ b/index.html
@@ -580,6 +580,7 @@
             });
             renderIncomeTable();
             updateSummary();
+          saveData();
         }
 
         function addExpenseRow() {
@@ -617,6 +618,7 @@
                 updateSummary();
                 updateCharts();
                 generateInsights();
+                saveData();
             }
         }
 
@@ -654,6 +656,7 @@
             updateSummary();
             updateCharts();
             generateInsights();
+          saveData();
         }
 
         function deleteSaving(id) {
